# rdev

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  package.json  tsconfig.json  vite.config.ts
.github/workflows/: android-apk.yml  build.yml  docker.yml  rust-client-gpu.yml
clients/rdev-android/: build.gradle  settings.gradle
clients/rdev-client-gpu/: Cargo.toml  README.md
clients/rdev-client-gpu/scripts/: package-linux-desktop.sh  smoke.sh  win7-smoke.sh
clients/rdev-client-gpu/src/: config.rs  desktop.rs  desktop_env.rs  fileput.rs  files.rs  forward.rs  gpu_desktop_service.rs  gpu_tunnel.rs  identity.rs  lib.rs  main.rs  protocol.rs  rdev_desktop_service.rs  session.rs  sftp.rs  updater.rs  version.rs  winpty.rs  ws_redirect.rs
clients/rdev-client-gpu/win7/: bcprng_shim.c  build_shims.py  copy_winpty_runtime.py  patch_imports.py  waitonaddress_shim.c  ws2_32_shim.c
cmd/rdev-client/: main.go
cmd/rdev-server/: gui_cgo.go  gui_nocgo.go  main.go  routes_test.go
cmd/rdev-service-wrapper/: main_other.go  main_windows.go
docs/: android-apk.md  android-termux.md  remote-desktop.md
internal/client/: client.go  client_stdin_test.go  desktop.go  desktop_capture_darwin.go  desktop_capture_drm_linux.go  desktop_capture_drm_linux_test.go  desktop_capture_dxgi_windows.go  desktop_capture_linux.go  desktop_capture_other.go  desktop_capture_windows.go  desktop_cursor.go  desktop_input.go  desktop_input_darwin.go  desktop_input_linux.go  desktop_input_other.go  desktop_input_windows.go  desktop_parallel.go  desktop_parallel_test.go  desktop_runtime.go  desktop_test.go  desktop_x11_env_linux.go  desktop_x11_env_linux_test.go  git_fallback.go  git_test.go  proxy.go  proxy_test.go  reconnect_test.go  ws_redirect_test.go
internal/gui/: gui.go  icon.go
internal/protocol/: fileput_test.go  protocol.go
internal/ptyutil/: pty.go  winpty_unsupported.go  winpty_windows.go
internal/server/: aliyunpan_backend.go  batch.go  desktop.go  file_backend.go  files.go  files_backend.go  forward.go  gpu_desktop_tunnel.go  server.go  server_test.go  sessions.go  sftp_backend.go  ssh.go  terminal.go  vnc.go  vnc_settings.go  vnc_test.go
internal/sshlib/: go.mod  go.sum  session.go  ssh.go  util.go
internal/updater/: restart_unix.go  restart_windows.go  updater.go  updater_test.go
scripts/: android-sftp-smoke.sh
web/: batch.html  desktop.html  files.html  index.html  sessions.html  terminal.html
web/public/: boot.js  (+4 more)
(+75 files in other folders)
