[package]
name = "rdev-client-gpu"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
publish = false

[features]
default = []
embedded-rdev-desktop = ["dep:rdev-desktop"]

[dependencies]
# Keep regular builds on current crates; the Win7 package applies PE import
# patches and shim DLLs after the normal Windows GNU build.
anyhow = "1.0.102"
rdev-desktop = { path = "vendor/rdev-desktop", optional = true, default-features = false }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
portable-pty = "0.9.0"
rand = "0.10.1"
russh-sftp = "2.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }
url = "2.5.8"
zeroize = "1.9.0"

[target.'cfg(windows)'.dependencies]
native-tls = "0.2.18"
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "native-tls"] }
libloading = "0.8.9"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Threading"] }

[target.'cfg(not(windows))'.dependencies]
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

[dev-dependencies]
tempfile = "3.27.0"
